# auroconverter

./: .gitignore  pyproject.toml
auroconverter/: __init__.py  caching.py  conv.py
tests/: test_caching.py
